# Multi-Sensor-SNN-Fusion

./: .dockerignore  .editorconfig  .env.example  .env.production  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  AUTONOMOUS_IMPLEMENTATION_SUMMARY.md  AUTONOMOUS_SDLC_COMPLETION_FINAL_REPORT.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  Makefile  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_CHARTER.md  README.md  RESEARCH_EXECUTIVE_SUMMARY.md  RESEARCH_PAPER_DRAFT.md  TERRAGON_AUTONOMOUS_SDLC_COMPLETION_REPORT.md  TERRAGON_IMPLEMENTATION_SUMMARY.md  advanced_neuromorphic_system.py  comprehensive_quality_gates.py  comprehensive_test_report.json  comprehensive_validation_suite.py  docker-compose.dev.yml  docker-compose.yml  integration_test_results.json  lightweight_research_results.json  lightweight_research_validation.py  performance_validation.py  production_deployment_manager.py  production_validation_lite_report.json  pyproject.toml  pytest.ini  quality_gates_report.json  requirements.txt  research_autonomous_execution.py  research_execution_framework.py  (+27 more)
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
deploy/docker/: Dockerfile
deploy/kubernetes/: deployment.yaml
deploy/production/: Dockerfile  docker-compose.production.yml
deploy/production/nginx/: nginx.conf
deploy/terraform/: main.tf
deployment/docker/: Dockerfile  docker-compose.yml  nginx.conf
deployment/kubernetes/: deployment.yaml  snn-fusion-deployment.yaml
deployment/monitoring/: prometheus.yml
deployment/production/: Dockerfile  docker-compose.yml
deployment_production/: Dockerfile  deployment_summary.json  docker-compose.production.yml
deployment_production/docs/: deployment-guide.md
deployment_production/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  service.yaml
deployment_production/monitoring/: prometheus.yml  snn_fusion_rules.yml
deployment_production/scripts/: deploy.sh  health_check.sh  scaling.sh
deployment_production/security/: network-policy.yaml  pod-security-policy.yaml  rbac.yaml  security-config.yaml
docs/: ROADMAP.md
docs/adr/: 001-liquid-state-machine-selection.md  README.md
docs/guides/: README.md
examples/: basic_multimodal_training.py  research_validation_tsa.py  simple_snn_training.py
scripts/: deploy_production.sh  health_check.py  production_server.py
src/snn_fusion/: __init__.py  cli.py
src/snn_fusion/algorithms/: __init__.py  adaptation.py  advanced_neuromorphic_enhancement.py  breakthrough_quantum_neuromorphic_optimizer.py  consciousness_driven_stdp.py  encoding.py  fusion.py  hardware_aware_adaptive_attention.py  meta_cognitive_neuromorphic_fusion.py  novel_ttfs_tsa_fusion.py  optimization.py  production_optimization_engine.py  quantum_neuromorphic_optimizer.py  revolutionary_consciousness_fusion.py  sgdic_neuromorphic_learning.py  temporal_reversible_attention.py  temporal_spike_attention.py  zero_shot_multimodal_lsm.py
src/snn_fusion/api/: __init__.py  app.py  middleware.py  routes.py
src/snn_fusion/database/: __init__.py  connection.py  migrations.py  seeders.py
src/snn_fusion/datasets/: __init__.py  loaders.py  maven_dataset.py  synthetic.py  transforms.py
src/snn_fusion/deployment/: distributed_deployment.py
src/snn_fusion/distributed/: cluster_manager.py
src/snn_fusion/globalization/: __init__.py  compliance.py  compliance_manager.py  i18n_manager.py  international.py  multi_region_manager.py  regional.py
src/snn_fusion/integrations/: __init__.py  github.py  notifications.py
src/snn_fusion/models/: __init__.py  attention.py  hierarchical_fusion.py  lsm.py  multimodal_lsm.py  neurons.py  readouts.py
src/snn_fusion/monitoring/: __init__.py  alerts.py  comprehensive_health_monitoring.py  comprehensive_monitoring.py  comprehensive_threat_monitoring.py  dashboards.py  (+3 more)
tests/: conftest.py  test_comprehensive_integration.py  test_comprehensive_suite.py
tests/integration/: test_api.py  test_training_pipeline.py
tests/unit/: test_models.py  test_repositories.py
(+89 files in other folders)
